mdapi/Custom/objects/Bulk_Regional_Component__c.object
<CustomObject>
    <description>This is a subset of the Bulk Deal object.  It is used to segment out the regions involved in a bulk deal, including workflow to alert them that they have properties to underwrite.</description>
    <fields>
        <fullName>Acqisition_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Acquisition Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bulk_Regional_Component1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BPO_Value__c</fullName>
        <label>BPO Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bulk_Deal__c</fullName>
        <label>Bulk Deal</label>
        <referenceTo>Bulk_Sale__c</referenceTo>
        <relationshipName>Bulk_Regional_Roll_up</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments_Instructions__c</fullName>
        <label>Comments/ Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Time_Underwriting_Complete__c</fullName>
        <label>Date/Time Underwriting Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_to_Region__c</fullName>
        <label>Date/Time to Region</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Inland Empire</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Nashville</fullName>
                </value>
                <value>
                    <fullName>Orlando</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Tampa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notify_Region_to_Enter_Properties__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box sends an email to the region telling them they need to either enter properties that are part of the bulk deal or complete the Bulk Upload Template.</inlineHelpText>
        <label>Notify Region to Enter Properties</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Properties__c</fullName>
        <label># Properties</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Property_Count_of_Bulk_Total__c</fullName>
        <formula>Properties__c /Bulk_Deal__r.Total_Properties__c</formula>
        <label>Property Count % of Bulk Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Region_Value__c</fullName>
        <label>Region Value @UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Market2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Inland Empire</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Nashville</fullName>
                </value>
                <value>
                    <fullName>Orlando</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Tampa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional_Head__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Head</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Bulk_Regional_Component</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Submit_to_Region__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will send an auto-alert to the regional head and acquisition team lead alerting them that they have properties included in a bulk deal that need to be reviewed.</inlineHelpText>
        <label>Submit UW Request to Region</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UW_Deadline__c</fullName>
        <label>UW Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UW_Notes__c</fullName>
        <label>UW Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Underwriting_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box will send an auto-alert to the Bulk Deal owner indicating that the regional underwriting is complete.</inlineHelpText>
        <label>Underwriting Complete</label>
        <type>Checkbox</type>
    </fields>
    <label>Bulk Regional Component</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Bulk_Deal__c</columns>
        <columns>NAME</columns>
        <columns>Properties__c</columns>
        <columns>Region__c</columns>
        <columns>Region_Value__c</columns>
        <columns>UW_Deadline__c</columns>
        <columns>Submit_to_Region__c</columns>
        <columns>Date_Time_to_Region__c</columns>
        <columns>Underwriting_Complete__c</columns>
        <columns>Date_Time_Underwriting_Complete__c</columns>
        <columns>Property_Count_of_Bulk_Total__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>UW_Complete</fullName>
        <columns>Bulk_Deal__c</columns>
        <columns>Properties__c</columns>
        <columns>Region__c</columns>
        <columns>Region_Value__c</columns>
        <columns>UW_Deadline__c</columns>
        <columns>Submit_to_Region__c</columns>
        <columns>Date_Time_to_Region__c</columns>
        <columns>Underwriting_Complete__c</columns>
        <columns>Date_Time_Underwriting_Complete__c</columns>
        <columns>Property_Count_of_Bulk_Total__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Underwriting_Complete__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>UW Complete</label>
    </listViews>
    <listViews>
        <fullName>UW_Deadline_This_Week</fullName>
        <columns>Bulk_Deal__c</columns>
        <columns>Properties__c</columns>
        <columns>Region__c</columns>
        <columns>Region_Value__c</columns>
        <columns>UW_Deadline__c</columns>
        <columns>Submit_to_Region__c</columns>
        <columns>Date_Time_to_Region__c</columns>
        <columns>Underwriting_Complete__c</columns>
        <columns>Date_Time_Underwriting_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UW_Deadline__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>UW Deadline This Week</label>
    </listViews>
    <listViews>
        <fullName>UW_Deadline_Today</fullName>
        <columns>Bulk_Deal__c</columns>
        <columns>Properties__c</columns>
        <columns>Region__c</columns>
        <columns>Region_Value__c</columns>
        <columns>UW_Deadline__c</columns>
        <columns>Submit_to_Region__c</columns>
        <columns>Date_Time_to_Region__c</columns>
        <columns>Underwriting_Complete__c</columns>
        <columns>Date_Time_Underwriting_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>UW_Deadline__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>UW Deadline Today</label>
    </listViews>
    <listViews>
        <fullName>UW_Pending</fullName>
        <columns>Bulk_Deal__c</columns>
        <columns>Properties__c</columns>
        <columns>Region__c</columns>
        <columns>Region_Value__c</columns>
        <columns>UW_Deadline__c</columns>
        <columns>Submit_to_Region__c</columns>
        <columns>Date_Time_to_Region__c</columns>
        <columns>Underwriting_Complete__c</columns>
        <columns>Date_Time_Underwriting_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Submit_to_Region__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Underwriting_Complete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>UW Pending</label>
    </listViews>
    <nameField>
        <displayFormat>BulkRegion - {0000}</displayFormat>
        <label>Bulk Regional Details</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Regional Component</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>